--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.josepcode.petagram"
+<manifest package="com.josepcode.petagramFragments"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
@@ -8,18 +8,22 @@
         android:supportsRtl="true"
         android:label=""
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".RankingPetsActivity"
-                  android:parentActivityName=".MainActivity">
+        <activity android:name=".activities.RankingPetsActivity"
+                  android:parentActivityName=".activities.MainActivity">
             <!--soporte para versiones 4.0 o menores-->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity"></meta-data>
+                android:value=".activities.MainActivity"></meta-data>
+        </activity>
+        <activity android:name=".activities.ContactoActivity">
+        </activity>
+        <activity android:name=".activities.BioActivity">
         </activity>
     </application>
 
